<?xml version="1.0"?>
<package format="2">
  <name>test_sys</name>
  <version>0.1.0</version>
  <description>The test_sys package</description>


  <maintainer email="chen@todo.todo">chen</maintainer>



  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
